<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_movie_details"
        android:enabled="true"
        android:icon="@drawable/vector_movie"
        android:title="@string/details"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_movie_trailers"
        android:enabled="true"
        android:icon="@drawable/vector_trailer"
        android:title="@string/trailers"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_movie_reviews"
        android:enabled="true"
        android:icon="@drawable/vector_reviews"
        android:title="@string/reviews"
        app:showAsAction="ifRoom" />
</menu>